About: A p5.js tropical cyclone simulation game

v20191004a:
    + Added "designations" system for more flexible and robust storm numbering and naming
        > Includes support for secondary (PAGASA-style) names (though currently not implemented)
        > Includes support for designations prior to TC formation (Invests) (Also not yet implemented)
v20191003a:
    + Added "Experimental" simulation mode
        > Currently a normal mode clone with very extreme SSTs
        > Expect it to frequently change as it will be used for testing purposes
    * env-defs.js is now sim-mode-defs.js to better encompass what it is for
    * each simulation mode's wave/ET spawning function is defined in sim-mode-defs.js now instead of directly in the Basin.advanceSim method
    * renamed simulation-mode-related constants
    * out-basin now based on a "subBasin number" and a Basin.subBasins object (partial addition of upcoming sub-basins system)
v20190911a:
    + Added a landfall counter to storm and season stats
v20190827d:
    * Limited "Starting year" selector to only allow years within the valid range of the Javascript Dates
v20190827c:
    * Fixed bug where 0001 B.C.E. (or 0002-01 B.C.E.) in the "Starting year" selector doesn't work and the basin uses the default instead
v20190827b:
    * Made the crash screen a little better
v20190827a:
    * The "Starting year" selector in the New Basin Settings menu now uses a text input box to make selecting a year easier
        > Accepts both valid NHem and SHem years (regardless of hemisphere selected with the button above)
        > Can use "B.C.E.", "BCE", "BC", "b.c.", etc. for years prior to 1 C.E. ("A.D.", "ce", "C.E.", etc. also treated as valid)
        > SHem years accept both two-digit and full year numbers after the "-" as valid as long as it represents the year following the one before the "-"